--- a/css/style.css
+++ b/css/style.css
@@ -346,5 +346,17 @@ a{
 }
 
 .edificio{
-    width: 100%;
+    height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
 }
+
+.img-wrapper{
+    overflow: hidden;
+    width: 100%;
+    position: relative;
+}
+
+
